adding book covers, still need text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1481,6 +1481,14 @@ body {
     margin-top: 35px;
 }
 
+.book-pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 200px;
+    /* width: 200px; */
+}
+
 
 /* .hero-btns a.bordered-btn {
     margin-left: 15px;
